kubernetes/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-webui
  namespace: hermes-agent
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 48080
      nodePort: 30480
  selector:
    app: hermes-webui
